--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -109,5 +109,17 @@
   "September": "Сентября",
   "October": "Октября",
   "November": "Ноября",
-  "December": "Декабря"
+  "December": "Декабря",
+
+
+
+
+
+  "UAH": "UAH Украинская гривна",
+  "USD": "USD Доллар США",
+  "AMD": "AMD Армянский драм",
+  "AUD": "AUD Австралийский доллар",
+  "AZN": "AZN Азербайджанский манат",
+  "BGN": "BGN Болгарский лев",
+
 }
