change api for rate and translate currency

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -120,4 +120,22 @@
   "AUD": "AUD Australian Dollar",
   "AZN": "AZN Azerbaijani Manat",
   "BGN": "BGN Bulgarian Lev",
+  "BYN": "BYN Belarusian Ruble",
+  "CAD": "CAD Canadian Dollar",
+  "CHF": "CHF Swiss Franc",
+  "CZK": "CZK Czech Republic Koruna",
+  "EUR": "EUR Euro",
+  "GBP": "GBP British Pound Sterling",
+  "RSD": "RSD Serbian Dinar",
+  "PLN": "PLN Polish Zloty",
+  "MNT": "MNT Mongolian Tugrik",
+  "MDL": "MDL Moldovan Leu",
+  "KGS": "KGS Kyrgystani Som",
+  "GEL": "GEL Georgian Lari",
+  "TMT": "TMT Turkmenistani Manat",
+  "TJS": "TJS Tajikistani Somoni",
+  "UZS": "UZS Uzbekistan Som",
+  "TRY": "TRY Turkish Lira",
+  "RUB": "RUB Russian Ruble",
+  "KZT": "KZT Kazakhstani Tenge"
 }
