--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -121,5 +121,23 @@
   "AUD": "AUD Австралийский доллар",
   "AZN": "AZN Азербайджанский манат",
   "BGN": "BGN Болгарский лев",
+  "BYN": "BYN Белорусский рубль",
+  "CAD": "CAD Канадский доллар",
+  "CHF": "CHF Швейцарский франк",
+  "CZK": "CZK Чешская крона",
+  "EUR": "EUR Евро",
+  "GBP": "GBP Фунт стерлингов Велико­британии",
+  "RSD": "RSD Сербский динар",
+  "PLN": "PLN Польский злотый",
+  "MNT": "MNT Монгольский тугрик",
+  "MDL": "MDL Молдовский лей",
+  "KGS": "KGS Киргизский сом",
+  "GEL": "GEL Грузинский лари",
+  "TMT": "TMT Туркменский манат",
+  "TJS": "TJS Таджикский сомони",
+  "UZS": "UZS Узбекский сум",
+  "TRY": "TRY Турецкая лира",
+  "RUB": "RUB Российский рубль",
+  "KZT": "KZT Казахстанский тенге"
 
 }
