add change theme

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -82,7 +82,7 @@
   "Year": "Year",
 
   "ATTENTION": "ATTENTION",
-  "delete_data": "All application data will be permanently deleted, after confirmation, the application will be restarted.",
+  "delete_data": "All application data will be permanently deleted, after confirmation, restart the application.",
 
   "In_developing": "In developing",
 
