--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -83,7 +83,7 @@
   "Year": "Год",
 
   "ATTENTION": "ВНИМАНИЕ",
-  "delete_data": "Все данные приложения будут удалены без возможности восстановления, после подтверждения, приложение будет перезапущено.",
+  "delete_data": "Все данные приложения будут удалены без возможности восстановления, после подтверждения, перезапустите приложение.",
 
   "In_developing": "В разработке",
 
